--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".activity.authentication.SignUp">
+    tools:context=".activity.authentication.SignUpActivity">
 
     <RelativeLayout
         android:layout_width="0dp"
